; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_fitsenc.c_write_keyword_value.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_fitsenc.c_write_keyword_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i32, i32*)* @write_keyword_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_keyword_value(%struct.TYPE_3__* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [80 x i8], align 16
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @strlen(i8* %12)
  store i32 %13, i32* %9, align 4
  %14 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 0
  %15 = call i32 @memset(i8* %14, i8 signext 32, i32 80)
  %16 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 0
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @memcpy(i8* %16, i8* %17, i32 %18)
  %20 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 8
  store i8 61, i8* %20, align 8
  %21 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 9
  store i8 32, i8* %21, align 1
  %22 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 0
  %23 = getelementptr inbounds i8, i8* %22, i64 10
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @snprintf(i8* %23, i32 70, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %24)
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = add nsw i32 %26, 10
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 %28
  %30 = load i32, i32* %10, align 4
  %31 = add nsw i32 %30, 10
  %32 = sext i32 %31 to i64
  %33 = sub i64 80, %32
  %34 = trunc i64 %33 to i32
  %35 = call i32 @memset(i8* %29, i8 signext 32, i32 %34)
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = getelementptr inbounds [80 x i8], [80 x i8]* %11, i64 0, i64 0
  %40 = call i32 @avio_write(i32 %38, i8* %39, i32 80)
  %41 = load i32*, i32** %8, align 8
  %42 = load i32, i32* %41, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %41, align 4
  ret i32 0
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @avio_write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
